# embedded-app-tutorial

./: README.md
test_frameworks/cpputest/: .gitignore  CMakeLists.txt  README.md
test_frameworks/cpputest/include/arithmetic/: arithmetic.h
test_frameworks/cpputest/src/: CMakeLists.txt  main.cpp
test_frameworks/cpputest/src/arithmetic/: CMakeLists.txt  arithmetic.cpp
test_frameworks/cpputest/test/include/: main_test.h
test_frameworks/cpputest/test/src/: CMakeLists.txt  main_test.cpp
test_frameworks/cpputest/test/src/arithmetic/: CMakeLists.txt  test_arithmetic.cpp
test_frameworks/googletest/: CMakeLists.txt  README.md
test_frameworks/googletest/include/: stack.h
test_frameworks/googletest/src/: CMakeLists.txt  main.c  stack.c
test_frameworks/googletest/test/src/: CMakeLists.txt  test_stack.cpp
